--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "handlebars": "^4.7.8"
   },
   "devDependencies": {
     "prisma": "^5.6.0"
